--- a/public/main.html
+++ b/public/main.html
@@ -109,13 +109,13 @@
         <a role="tab" aria-controls="panel-2"
            class="mdc-tab">Location</a>
         <a role="tab" aria-controls="panel-3"
-           class="mdc-tab mdc-tab--active">Course Offered</a>
+           class="mdc-tab">Course Offered</a>
         <a role="tab" aria-controls="panel-4"
            class="mdc-tab">Time Table</a>
         <a role="tab" aria-controls="panel-5"
            class="mdc-tab">Profile</a>
         <a role="tab" aria-controls="panel-6"
-           class="mdc-tab">Other</a>
+           class="mdc-tab mdc-tab--active">Other</a>
         <a role="tab" aria-controls="panel-7"
            class="mdc-tab">Settings</a>
         <span class="mdc-tab-bar__indicator modified-mdc-tab-bar__indicator"></span>
@@ -916,7 +916,7 @@
 
     </section>
     <!-- SECTION Course Offered -->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="panel-4" role="tabpanel">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
           <h1 class="mdc-typography--headline">Course Offered</h1>
@@ -1190,7 +1190,7 @@
     </section>
 
     <!-- Section Other-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-class"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-class"
              role="tabpanel"
              aria-hidden="true">
       <!--
@@ -1207,14 +1207,14 @@
             <div class="mdc-layout-grid__inner">
 
               <div id="alchemy-class-view__filter-by-text"
-                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-5">
+                   class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-layout-grid__cell--span-3">
                 <i class="material-icons mdc-text-field__icon" tabindex="0">search</i>
                 <input type="text" class="mdc-text-field__input">
                 <label class="mdc-floating-label" for="my-text-field">Search</label>
                 <div class="mdc-line-ripple"></div>
               </div>
 
-              <div id="alchemy-class-view__filter-by-level" class="mdc-select  mdc-layout-grid__cell--span-2"
+              <div id="alchemy-class-view__filter-by-level" class="mdc-select  mdc-layout-grid__cell--span-3"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1226,7 +1226,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="alchemy-class-view__filter-by-division" class="mdc-select  mdc-layout-grid__cell--span-2"
+              <div id="alchemy-class-view__filter-by-division" class="mdc-select  mdc-layout-grid__cell--span-3"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1305,14 +1305,13 @@
             <h1 class="mdc-typography--headline">Add Class</h1>
             <form id="alchemy-class-add__form" class="mdc-layout-grid__inner" onsubmit=" ">
 
-              <!-- Class Level & Division-->
-              <div class="mdc-layout-grid__cell--span-4">
-                <div id="alchemy-class-add__class-level-division"
+              <!-- Class Level-->
+              <div class="mdc-layout-grid__cell--span-3">
+                <div id="alchemy-class-add__class-level"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
-                  <input type="text" id="alchemy-class-add__class-level-division--input" class="mdc-text-field__input"
-                         aria-controls="name-validation-message" autocomplete="off" required minlength=3>
-                  <label for="alchemy-course-add__course-alias--input" class="mdc-floating-label">Level &
-                    Division</label>
+                  <input type="text" id="alchemy-class-add__class-level--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=1>
+                  <label for="alchemy-class-add__class-level--input" class="mdc-floating-label">Level</label>
                   <div class="mdc-notched-outline">
                     <svg>
                       <path class="mdc-notched-outline__path"/>
@@ -1320,26 +1319,47 @@
                   </div>
                   <div class="mdc-notched-outline__idle"></div>
                 </div>
-                <p id="alchemy-class-add__class-level-division--validation-msg"
+                <p id="alchemy-class-add__class-level--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!--Class Division-->
+              <div class="mdc-layout-grid__cell--span-3">
+                <div id="alchemy-class-add__class-division"
+                     class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
+                  <input type="text" id="alchemy-class-add__class-division--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=1>
+                  <label for="alchemy-class-add__class-division--input" class="mdc-floating-label">Division</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-class-add__class-division--validation-msg"
                    class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
                   Required.
                 </p>
               </div>
               <!-- Class Location - Default-class -->
-              <div id="alchemy-class-add__class-location" class="mdc-select mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
+              <!-- Auto-complete Location -->
+              <div id="alchemy-class__class-location"
+                   class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-3">
+                <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+                <input type="text" id="alchemy-class__class-location--input" class="mdc-text-field__input">
+                <label class="mdc-floating-label" for="my-text-field">Location</label>
+                <div class="mdc-line-ripple"></div>
+                <ul id="alchemy-class-location__list" class="mdc-list mdc-list--two-line">
+                </ul>
+              </div>
+              <div id="alchemy-class__class-location--menu" class="mdc-menu mdc-select__menu">
+                <ul class="mdc-list mdc-menu__items">
+                </ul>
               </div>
               <!-- Class Branch -->
-              <div id="alchemy-class-add__class-department" class="mdc-select mdc-layout-grid__cell--span-4"
+              <div id="alchemy-class-add__class-department" class="mdc-select mdc-layout-grid__cell--span-3"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1350,9 +1370,6 @@
                   <ul class="mdc-list mdc-menu__items">
                   </ul>
                 </div>
-              </div>
-              <!-- Action button fix --span-8 -->
-              <div id="alchemy-class-add__div-fix" class="mdc-layout-grid__cell--span-8">
               </div>
               <div class="mdc-layout-grid__cell--span-6 ">
                 <button id="alchemy-class-add__add-button" class="mdc-button mdc-button--raised"
